tests/neg/fact.stk
def fact(n: Int) =  // error
  if n == 0 then 1
  else fact (n - 1)
